--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,32 +27,35 @@ environment:
 # dependencies can be manually updated by changing the version numbers below to
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
+
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.13.5
+  flutter_localizations:
+    sdk: flutter
+  http: ^1.2.2
   provider: ^6.0.5
   flutter_slidable: ^2.0.0
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the Cuhttp:^1.2.2pertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
-
+  file_picker: ^5.2.11
+  path_provider: ^2.0.15
+  cupertino_icons: ^1.0.2
+  google_fonts: ^5.1.0
+  animations: ^2.0.7
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  flutter_lints: ^2.0.0
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^4.0.0
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
 
-# The following section is specific to Flutter packages.
+  # For information on the generic Dart part of this file, see the
+  # following page: https://dart.dev/tools/pub/pubspec
+
+  # The following section is specific to Flutter packages.
 flutter:
 
   # The following line ensures that the Material Icons font is
@@ -63,7 +66,7 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
+  generate: true
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
