--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^5.1.0
   animations: ^2.0.7
+  fl_chart: ^0.62.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
