--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = app_unit
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.appUnit
+PRODUCT_BUNDLE_IDENTIFIER = com.unit.appUnit
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2024 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2024 com.unit. All rights reserved.
