--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: app_unit
-description: "A new Flutter project."
+description: "app unit flutter"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -27,7 +27,6 @@ environment:
 # dependencies can be manually updated by changing the version numbers below to
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
-
 dependencies:
   flutter:
     sdk: flutter
@@ -36,17 +35,23 @@ dependencies:
   http: ^1.2.2
   provider: ^6.0.5
   flutter_slidable: ^2.0.0
-  file_picker: ^5.2.11
-  path_provider: ^2.0.15
+  file_picker: ^5.3.3
+  path_provider: ^2.1.1
   cupertino_icons: ^1.0.2
   google_fonts: ^5.1.0
   animations: ^2.0.7
-  fl_chart: ^0.62.0
+  csv: ^5.0.2 # For CSV parsing
+  fl_chart: ^0.69.2
+
+  # The following adds the Cupertino Icons font to your application.
+  # Use with the CupertinoIcons class for iOS style icons.
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -54,21 +59,22 @@ dev_dependencies:
   # rules and activating additional ones.
 
 
-  # For information on the generic Dart part of this file, see the
-  # following page: https://dart.dev/tools/pub/pubspec
+# For information on the generic Dart part of this file, see the
+# following page: https://dart.dev/tools/pub/pubspec
 
-  # The following section is specific to Flutter packages.
+# The following section is specific to Flutter packages.
 flutter:
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-  generate: true
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
