--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,11 +89,11 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
+            VALUE "CompanyName", "com.unit" "\0"
             VALUE "FileDescription", "app_unit" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "app_unit" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2024 com.example. All rights reserved." "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2024 com.unit. All rights reserved." "\0"
             VALUE "OriginalFilename", "app_unit.exe" "\0"
             VALUE "ProductName", "app_unit" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
